// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorMessage /> prop.arrow equals bottom renders correctly 1`] = `
.c0 {
  padding: 0.75rem;
  position: relative;
  width: 100%;
  display: block;
  text-align: left;
}

.c0:after {
  content: '';
  height: 0;
  width: 0;
  position: absolute;
  border: solid transparent;
  border-width: 0.625rem;
}

.c0:after {
  top: 100%;
  left: 0.75rem;
  border-top-color: #FCEBCD;
}

<Text
  arrow="bottom"
  bg="ui.errorBackground"
  blacklist={
    Array [
      "arrow",
    ]
  }
  className="c0"
  hidden={false}
  textStyle="text"
>
  An error occurred
</Text>
`;

exports[`<ErrorMessage /> prop.arrow equals left renders correctly 1`] = `
.c0 {
  padding: 0.75rem;
  position: relative;
  width: 100%;
  display: block;
  text-align: left;
}

.c0:after {
  content: '';
  height: 0;
  width: 0;
  position: absolute;
  border: solid transparent;
  border-width: 0.625rem;
}

.c0:after {
  top: 50%;
  right: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  border-right-color: #FCEBCD;
}

<Text
  arrow="left"
  bg="ui.errorBackground"
  blacklist={
    Array [
      "arrow",
    ]
  }
  className="c0"
  hidden={false}
  textStyle="text"
>
  An error occurred
</Text>
`;

exports[`<ErrorMessage /> prop.arrow equals right renders correctly 1`] = `
.c0 {
  padding: 0.75rem;
  position: relative;
  width: 100%;
  display: block;
  text-align: left;
}

.c0:after {
  content: '';
  height: 0;
  width: 0;
  position: absolute;
  border: solid transparent;
  border-width: 0.625rem;
}

.c0:after {
  top: 50%;
  left: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  border-left-color: #FCEBCD;
}

<Text
  arrow="right"
  bg="ui.errorBackground"
  blacklist={
    Array [
      "arrow",
    ]
  }
  className="c0"
  hidden={false}
  textStyle="text"
>
  An error occurred
</Text>
`;

exports[`<ErrorMessage /> prop.arrow equals top renders correctly 1`] = `
.c0 {
  padding: 0.75rem;
  position: relative;
  width: 100%;
  display: block;
  text-align: left;
}

.c0:after {
  content: '';
  height: 0;
  width: 0;
  position: absolute;
  border: solid transparent;
  border-width: 0.625rem;
}

.c0:after {
  bottom: 100%;
  left: 0.75rem;
  border-bottom-color: #FCEBCD;
}

<Text
  arrow="top"
  bg="ui.errorBackground"
  blacklist={
    Array [
      "arrow",
    ]
  }
  className="c0"
  hidden={false}
  textStyle="text"
>
  An error occurred
</Text>
`;

exports[`<ErrorMessage /> renders correctly 1`] = `
.c0 {
  padding: 0.75rem;
  position: relative;
  width: 100%;
  display: block;
  text-align: left;
}

.c0:after {
  content: '';
  height: 0;
  width: 0;
  position: absolute;
  border: solid transparent;
  border-width: 0.625rem;
}

<Text
  arrow={null}
  bg="ui.errorBackground"
  blacklist={
    Array [
      "arrow",
    ]
  }
  className="c0"
  hidden={false}
  textStyle="text"
>
  An error occurred
</Text>
`;
